Add Aeron client and server java execs